Fixed text overlapping issue

--- a/style.css
+++ b/style.css
@@ -270,6 +270,7 @@ img.alignright,
 .intro .cover-heading {
 	font-family: 'Sanchez', sans-serif;
 	font-size: 50px;
+	word-break: break-all;
 }
 .intro .arrow .fa {
 	font-size: 50px;
@@ -293,15 +294,16 @@ img.alignright,
 	padding-bottom: 50px;
 	text-align: center;
 }
-.about .about-header h3 {
-	color: #9F8E8E;
-	font-size: 15px;
-	margin-top: 0;
-}
 .about .about-header h2 {
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
+	word-break: break-all;
+}
+.about .about-header h3 {
+	color: #9F8E8E;
+	font-size: 15px;
+	margin-top: 0;
 }
 .about .lead {
 	margin-top: 20px;
@@ -330,6 +332,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
+	word-break: break-all;
 }
 .social .row .social-box {
 	float: none;
@@ -458,6 +461,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
+	word-break: break-all;
 }
 .services h3 {
 	color: #9F8E8E;
@@ -515,13 +519,14 @@ img.alignright,
 	font-weight: bold;
 	word-break: break-all;
 }
-.separator .btn:hover {
-	background: #222;
-	border-color: #222;
-}
 .separator .btn {
 	background: #181616;
 	border-color: #181616;
+	white-space: normal;
+}
+.separator .btn:hover {
+	background: #222;
+	border-color: #222;
 }
 
 /*
@@ -542,6 +547,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
+	word-break: break-all;
 }
 .skills h3 {
 	color: #9F8E8E;
@@ -638,6 +644,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
+	word-break: break-all;
 }
 .portfolio-grid h3 {
 	color: #9F8E8E;
@@ -727,6 +734,7 @@ img.alignright,
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
 	color: #FFF;
+	word-break: break-all;
 }
 .subscribe h3 {
 	color: #FFF;
@@ -763,6 +771,7 @@ img.alignright,
 	border-radius: 0 !important;
 	display: inline-block;
 	font-size: 15px;
+	white-space: normal;
 }
 .subscribe .sib_signup_form .sib_signup_box_inside .sib-default-btn:hover {
 	background: #222;
@@ -788,6 +797,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
+	word-break: break-all;
 }
 .pricing h3 {
 	color: #9F8E8E;
@@ -886,6 +896,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
+	word-break: break-all;
 }
 .testimonials h3 {
 	color: #FFF;
@@ -1373,6 +1384,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
+	word-break: break-all;
 }
 .blogposts h3 {
 	color: #9F8E8E;
@@ -1439,6 +1451,7 @@ img.alignright,
 	font-size: 40px;
 	font-family: "Sanchez",sans-serif;
 	font-weight: bold;
+	word-break: break-all;
 }
 .contact h3 {
 	color: #FFF;
@@ -1514,6 +1527,7 @@ div.wpcf7-response-output {
 .archive-header .cover-heading {
 	font-family: 'Sanchez', sans-serif;
 	font-size: 50px;
+	word-break: break-all;
 }
 .post-header {
 	background: transparent url('assets/images/blog.jpg') repeat scroll center center / cover;
